*Rails 3.2.0 (unreleased)*

* Changed log level of warning for missing CSRF token from :debug to :warn. [Mike Dillon]

* content_tag_for and div_for can now take the collection of records. It will also yield the record as the first argument if you set a receiving argument in your block [Prem Sichanugrist]

  So instead of having to do this:

    @items.each do |item|
      content_tag_for(:li, item) do
         Title: <%= item.title %>
      end
    end

  You can now do this:

    content_tag_for(:li, @items) do |item|
      Title: <%= item.title %>
    end

* send_file now guess the mime type [Esad Hajdarevic]

* Mime type entries for PDF, ZIP and other formats were added [Esad Hajdarevic]

* Generate hidden input before select with :multiple option set to true.
  This is useful when you rely on the fact that when no options is set,
  the state of select will be sent to rails application. Without hidden field
  nothing is sent according to HTML spec [Bogdan Gusiev]

* Refactor ActionController::TestCase cookies [Andrew White]

  Assigning cookies for test cases should now use cookies[], e.g:

    cookies[:email] = 'user@example.com'
    get :index
    assert_equal 'user@example.com', cookies[:email]

  To clear the cookies, use clear, e.g:

    cookies.clear
    get :index
    assert_nil cookies[:email]

  We now no longer write out HTTP_COOKIE and the cookie jar is
  persistent between requests so if you need to manipulate the environment
  for your test you need to do it before the cookie jar is created.


*Rails 3.1.1 (unreleased)*

* Don't mount Sprockets server at config.assets.prefix if config.assets.compile is false. [Mark J. Titorenko]

* Set relative url root in assets when controller isn't available for Sprockets (eg. Sass files using asset_path). Fixes #2435 [Guillermo Iguaran]

* Fix basic auth credential generation to not make newlines. GH #2882
